# poetry-copier

./: .gitignore  README.md  copier.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: test.yml
docs/: design.md  development.md  ide.md  integrations.md  troubleshooting.md
macros/: slugify.jinja
template/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.jinja  README.md.jinja  docker-compose.yml.jinja  pyproject.toml.jinja  {% if ci == 'gitlab' %}.gitlab-ci.yml{% endif %}.jinja  {% if use_makefile %}Makefile{% endif %}
template/.devcontainer/: devcontainer.json.jinja
template/docs/: README.md.jinja
template/src/{% if not use_django %}{{ package_slug }}{% endif %}/: {% if use_gradio %}app.py{% endif %}.jinja  {% if use_streamlit %}app.py{% endif %}.jinja
template/src/{% if use_django %}{{ package_slug }}{% endif %}/: __init__.py  settings.py.jinja  urls.py.jinja  views.py  wsgi.py.jinja
template/src/{{ package_slug }}/: __init__.py.jinja  {% if use_django %}app.py{% endif %}.jinja  {% if use_gradio %}app.py{% endif %}.jinja  {%if use_fastapi%}app.py{%endif%}.jinja
template/tests/: __init__.py.jinja
template/tests/{{ package_slug }}/: __init__.py.jinja  test_foo.py
template/{% if ci == 'github' %}.github{% endif %}/: dependabot.yml
template/{% if ci == 'github' %}.github{% endif %}/workflows/: push_to_ecr.yml  push_to_ghcr.yml  test.yml.jinja  {% if not use_app %}publish.yml{% endif %}.jinja  {% if use_app %}push_to_ghcr.yml{% endif %}  {% if use_push_ecr %}push_to_ecr.yml{% endif %}
testing/: .gitignore  pyproject.toml
testing/tests/: __init__.py  conftest.py  test_django.py  test_fastapi.py  test_gradio.py  test_package.py  test_streamlit.py  utils.py
